assignment-1/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from c:\Users\84865\Documents\HCMUT-cse20\CSE-PPL\assignment-1\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from antlr4.error.ErrorListener import ConsoleErrorListener, ErrorListener

class NewErrorListener(ConsoleErrorListener):
    INSTANCE = None

    def syntaxError(self, recognizer, offendingSymbol, line, column, msg, e):
	    return SyntaxException("Error on line " + str(line) +
                              " col " + str(column) + ": " + offendingSymbol.text)

NewErrorListener.INSTANCE = NewErrorListener()

class SyntaxException(Exception):
    def __init__(self, msg):
        self.message = msg




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'printBoolean'", "'readString'", "'printString'", 
                     "'super'", "'preventDefault'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'integer'", "'void'", "'array'", "'float'", "'return'", 
                     "'out'", "'boolean'", "'for'", "'string'", "'continue'", 
                     "'do'", "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'::'", "'.'", "','", "';'", "'='", "':'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "INTEGER_LIT", 
                      "FLOAT_LIT", "BOOLEAN_LIT", "STRING_LIT", "ARRAY_LIT", 
                      "ARRAY_LIT_INT", "ARRAY_LIT_FLOAT", "ARRAY_LIT_STRINGLIST", 
                      "AUTO", "BREAK", "INTEGER", "VOID", "ARRAY", "FLOAT", 
                      "RETURN", "OUT", "BOOLEAN", "FOR", "STRING", "CONTINUE", 
                      "DO", "FUNCTION", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "LESS", "GREATER", 
                      "LTE", "GTE", "NOT", "AND", "OR", "EQUAL_TO", "NOT_EQUAL", 
                      "CONCAT", "PERIOD", "COMMA", "SEMI", "EQUAL", "COLON", 
                      "LB", "RB", "LSB", "RSB", "LCB", "RCB", "IDENTIFIER", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_array_type = 2
    RULE_element_type = 3
    RULE_dimesion = 4
    RULE_dimesion_type_int = 5
    RULE_dimesion_type_float = 6
    RULE_variable_decl = 7
    RULE_var_decl_no_eq = 8
    RULE_var_decl_list = 9
    RULE_recursive_factor = 10
    RULE_var_decl_func = 11
    RULE_recursive_func = 12
    RULE_var_decl_array = 13
    RULE_recursive_array = 14
    RULE_array_list = 15
    RULE_exp_list_term = 16
    RULE_identifier_list = 17
    RULE_expression_list = 18
    RULE_exp_list_type_int = 19
    RULE_exp_list_type_float = 20
    RULE_exp_list_type_string = 21
    RULE_parameter = 22
    RULE_expression = 23
    RULE_expression_1 = 24
    RULE_expression_2 = 25
    RULE_expression_3 = 26
    RULE_expression_4 = 27
    RULE_expression_5 = 28
    RULE_expression_6 = 29
    RULE_expression_7 = 30
    RULE_expression_8 = 31
    RULE_factor = 32
    RULE_function_call = 33
    RULE_exps_list = 34
    RULE_exp_list = 35
    RULE_statement = 36
    RULE_assign_stmt = 37
    RULE_lhs = 38
    RULE_if_stmt = 39
    RULE_for_stmt = 40
    RULE_scala_val = 41
    RULE_init_expr = 42
    RULE_condition_expr = 43
    RULE_update_expr = 44
    RULE_while_stmt = 45
    RULE_do_while_stmt = 46
    RULE_call_stmt = 47
    RULE_block_stmt = 48
    RULE_statement_term = 49
    RULE_statement_list = 50
    RULE_break_stmt = 51
    RULE_continue_stmt = 52
    RULE_return_stmt = 53
    RULE_function_decl = 54
    RULE_inheritance = 55
    RULE_function_name = 56
    RULE_paramter_list = 57
    RULE_paramter_list_term = 58
    RULE_return_type = 59
    RULE_s_func_decl = 60
    RULE_read_integer = 61
    RULE_print_integer = 62
    RULE_read_float = 63
    RULE_write_float = 64
    RULE_print_boolean = 65
    RULE_read_string = 66
    RULE_print_string = 67
    RULE_super_ = 68
    RULE_prevent_default = 69

    ruleNames =  [ "program", "decls", "array_type", "element_type", "dimesion", 
                   "dimesion_type_int", "dimesion_type_float", "variable_decl", 
                   "var_decl_no_eq", "var_decl_list", "recursive_factor", 
                   "var_decl_func", "recursive_func", "var_decl_array", 
                   "recursive_array", "array_list", "exp_list_term", "identifier_list", 
                   "expression_list", "exp_list_type_int", "exp_list_type_float", 
                   "exp_list_type_string", "parameter", "expression", "expression_1", 
                   "expression_2", "expression_3", "expression_4", "expression_5", 
                   "expression_6", "expression_7", "expression_8", "factor", 
                   "function_call", "exps_list", "exp_list", "statement", 
                   "assign_stmt", "lhs", "if_stmt", "for_stmt", "scala_val", 
                   "init_expr", "condition_expr", "update_expr", "while_stmt", 
                   "do_while_stmt", "call_stmt", "block_stmt", "statement_term", 
                   "statement_list", "break_stmt", "continue_stmt", "return_stmt", 
                   "function_decl", "inheritance", "function_name", "paramter_list", 
                   "paramter_list_term", "return_type", "s_func_decl", "read_integer", 
                   "print_integer", "read_float", "write_float", "print_boolean", 
                   "read_string", "print_string", "super_", "prevent_default" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    COMMENT=10
    INTEGER_LIT=11
    FLOAT_LIT=12
    BOOLEAN_LIT=13
    STRING_LIT=14
    ARRAY_LIT=15
    ARRAY_LIT_INT=16
    ARRAY_LIT_FLOAT=17
    ARRAY_LIT_STRINGLIST=18
    AUTO=19
    BREAK=20
    INTEGER=21
    VOID=22
    ARRAY=23
    FLOAT=24
    RETURN=25
    OUT=26
    BOOLEAN=27
    FOR=28
    STRING=29
    CONTINUE=30
    DO=31
    FUNCTION=32
    OF=33
    ELSE=34
    IF=35
    WHILE=36
    INHERIT=37
    PLUS=38
    MINUS=39
    MUL=40
    DIV=41
    MOD=42
    LESS=43
    GREATER=44
    LTE=45
    GTE=46
    NOT=47
    AND=48
    OR=49
    EQUAL_TO=50
    NOT_EQUAL=51
    CONCAT=52
    PERIOD=53
    COMMA=54
    SEMI=55
    EQUAL=56
    COLON=57
    LB=58
    RB=59
    LSB=60
    RSB=61
    LCB=62
    RCB=63
    IDENTIFIER=64
    WS=65
    ERROR_CHAR=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclsContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclsContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140
                self.decls()
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 145
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(MT22Parser.Variable_declContext,0)


        def function_decl(self):
            return self.getTypedRuleContext(MT22Parser.Function_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.variable_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.function_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def dimesion(self):
            return self.getTypedRuleContext(MT22Parser.DimesionContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def element_type(self):
            return self.getTypedRuleContext(MT22Parser.Element_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_type




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MT22Parser.ARRAY)
            self.state = 152
            self.match(MT22Parser.LSB)
            self.state = 153
            self.dimesion()
            self.state = 154
            self.match(MT22Parser.RSB)
            self.state = 155
            self.match(MT22Parser.OF)
            self.state = 156
            self.element_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Element_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_element_type




    def element_type(self):

        localctx = MT22Parser.Element_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimesionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimesion_type_int(self):
            return self.getTypedRuleContext(MT22Parser.Dimesion_type_intContext,0)


        def dimesion_type_float(self):
            return self.getTypedRuleContext(MT22Parser.Dimesion_type_floatContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimesion




    def dimesion(self):

        localctx = MT22Parser.DimesionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dimesion)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.dimesion_type_int()
                pass
            elif token in [MT22Parser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.dimesion_type_float()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimesion_type_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LIT(self):
            return self.getToken(MT22Parser.INTEGER_LIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimesion_type_int(self):
            return self.getTypedRuleContext(MT22Parser.Dimesion_type_intContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimesion_type_int




    def dimesion_type_int(self):

        localctx = MT22Parser.Dimesion_type_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimesion_type_int)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(MT22Parser.INTEGER_LIT)
                self.state = 165
                self.match(MT22Parser.COMMA)
                self.state = 166
                self.dimesion_type_int()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(MT22Parser.INTEGER_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimesion_type_floatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.FLOAT_LIT)
            else:
                return self.getToken(MT22Parser.FLOAT_LIT, i)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimesion_type_float(self):
            return self.getTypedRuleContext(MT22Parser.Dimesion_type_floatContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimesion_type_float




    def dimesion_type_float(self):

        localctx = MT22Parser.Dimesion_type_floatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimesion_type_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(MT22Parser.FLOAT_LIT)
            self.state = 171
            self.match(MT22Parser.COMMA)
            self.state = 172
            self.dimesion_type_float()
            self.state = 173
            self.match(MT22Parser.FLOAT_LIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_no_eq(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_no_eqContext,0)


        def var_decl_list(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_listContext,0)


        def var_decl_func(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_funcContext,0)


        def var_decl_array(self):
            return self.getTypedRuleContext(MT22Parser.Var_decl_arrayContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variable_decl




    def variable_decl(self):

        localctx = MT22Parser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_decl)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.var_decl_no_eq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.var_decl_list()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.var_decl_func()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 178
                self.var_decl_array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_no_eqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def element_type(self):
            return self.getTypedRuleContext(MT22Parser.Element_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl_no_eq




    def var_decl_no_eq(self):

        localctx = MT22Parser.Var_decl_no_eqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_decl_no_eq)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.identifier_list()
            self.state = 182
            self.match(MT22Parser.COLON)
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.INTEGER, MT22Parser.FLOAT, MT22Parser.BOOLEAN, MT22Parser.STRING]:
                self.state = 183
                self.element_type()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 184
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 187
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def recursive_factor(self):
            return self.getTypedRuleContext(MT22Parser.Recursive_factorContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def element_type(self):
            return self.getTypedRuleContext(MT22Parser.Element_typeContext,0)


        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl_list




    def var_decl_list(self):
